<resources>
    <string name="app_name">Tutorial5</string>
    <string name="employee_id">Employee Id</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="position">Position</string>
    <string name="add_data">Add Data</string>
    <string name="view_all_data">VIEW ALL DATA</string>
    <string name="delete_data">DELETE DATA</string>
    <string name="id">ID</string>
</resources>